# Novel-Numerical-Integration-Methods

./: CONVERGENCE_ANALYSIS.md  LICENSE  README.md  butcher_tables.py  config.py  config_accuracy_focused.py  config_mixed_focus.py  config_stability_focused.py  integrator_runner.py  metrics.py  metrics_log.csv  model.py  pyproject.toml  requirements.txt  test_cuda.py  test_performance.py  train.py  train_accuracy_focused.py  visualization.py
checkpoints_run_2_efficiency_focused/: checkpoint_epoch_10.json  checkpoint_epoch_100.json  checkpoint_epoch_20.json  checkpoint_epoch_30.json  checkpoint_epoch_40.json  checkpoint_epoch_50.json  checkpoint_epoch_60.json  checkpoint_epoch_70.json  checkpoint_epoch_80.json  checkpoint_epoch_90.json  ml_pipeline.pth
comprehensive_test_suite/: README.md
configs/: __init__.py  accuracy_focused.py  base.py  efficiency_focused.py  enhanced.py  mixed_focus.py  quick_test_trial.py  stability_focused.py  trial_4stage_accuracy.py  trial_4stage_efficiency.py  trial_4stage_evolution.py  trial_4stage_exploration.py  trial_4stage_novelty.py  trial_4stage_novelty_2.py  trial_7stage_accuracy.py  trial_7stage_efficiency.py  trial_7stage_evolution.py
data/: ode_dataset.pkl  ode_dataset_4stage_accuracy_1001_complexity_2.pkl  ode_dataset_4stage_efficiency_1002_complexity_2.pkl  ode_dataset_4stage_evolution_1007_complexity_2.pkl  ode_dataset_4stage_exploration_1008_complexity_2.pkl  ode_dataset_4stage_novelty_1009_complexity_2.pkl  ode_dataset_4stage_novelty_2_2009_complexity_2.pkl  ode_dataset_7stage_accuracy_1003_complexity_3.pkl  ode_dataset_7stage_efficiency_1004_complexity_3.pkl  ode_dataset_7stage_efficiency_1005_complexity_3.pkl  ode_dataset_7stage_evolution_1006_complexity_3.pkl  ode_dataset_test_evolution_fixes_9999_complexity_2.pkl  ode_dataset_trial_1_complexity_1.pkl  ode_dataset_trial_2_complexity_2.pkl
docs/: ISSUE_ANALYSIS_AND_SOLUTION.md
examples/: basic_usage.py  cuda_demo.py
results/: OPTIMAL_BUTCHER_TABLE.json  analysis_report.md  best_butcher_table.json  comprehensive_analysis_report.md  comprehensive_results.csv  (+12 more)
(+224 files in other folders)
